# llama-runtime

./: .env.example  .gitignore  LICENSE  Makefile  README.md  README_BENCHMARK.md  meta.json.tmpl
.github/workflows/: ci.yml  release.yml
native/: CMakeLists.txt  README.md
native/include/: llama_adapter.h  llama_adapter_core.h
native/src/: llama_adapter.cpp  llama_adapter_core.cpp
native/tests/: integration_test.cpp
src/: Directory.Packages.props  llama-runtime.slnx
src/LlamaRuntime.Benchmarks/: LlamaRuntime.Benchmarks.csproj  Program.cs
src/LlamaRuntime.Benchmarks/Benchmarks/: GrpcBenchmark.cs  LlamaRestBenchmark.cs
src/LlamaRuntime.Benchmarks/Common/: BenchmarkRunner.cs
src/LlamaRuntime.Benchmarks/Configuration/: BenchmarkMode.cs  BenchmarkOptions.cs  ConfigurationLoader.cs
src/LlamaRuntime.Common.Tests/: LlamaRuntime.Common.Tests.csproj  TestCategories.cs
src/LlamaRuntime.Engine/: ContextPool.cs  EngineModel.cs  LlamaContextManager.cs  LlamaProvider.cs  LlamaRuntime.Engine.csproj  LlamaSession.cs  LoadedModelAccessor.cs  ProviderServiceCollectionExtensions.cs
src/LlamaRuntime.Engine.Contracts/: EngineExceptions.cs  IEngineModel.cs  IInferenceSession.cs  IInferenceSessionFactory.cs  ILlamaContextManager.cs  ILlamaProvider.cs  ILoadedModelAccessor.cs  LlamaRuntime.Engine.Contracts.csproj
src/LlamaRuntime.Engine.Contracts/Configuration/: LlamaProviderOptions.cs
src/LlamaRuntime.Engine.Tests/: LlamaContextManagerTests.cs  LlamaProviderTests.cs  LlamaRuntime.Engine.Tests.csproj
src/LlamaRuntime.Native/: LlamaNative.cs  LlamaRuntime.Native.csproj  NativeLoader.cs  NativeMethods.cs  NativeServiceCollectionExtensions.cs
src/LlamaRuntime.Native.Contracts/: ILlamaNative.cs  LlamaContextHandle.cs  LlamaModelHandle.cs  NativeError.cs  NativeExceptions.cs  NativeHandleReleaser.cs
src/LlamaRuntime.Native.Contracts/Configuration/: LlamaNativeOptions.cs
src/LlamaRuntime.Presentation.Grpc/: LlamaRuntime.Presentation.Grpc.csproj  Program.cs  appsettings.json
src/LlamaRuntime.Presentation.Grpc.Tests/: GeneratorIntegrationTests.cs  InferenceManagerTests.cs  LlamaRuntime.Presentation.Grpc.Tests.csproj  TestWebApplicationFactory.cs
src/LlamaRuntime.Presentation.Grpc.Tests/Properties/: launchSettings.json
src/LlamaRuntime.Presentation.Grpc/Auth/: ApiKeyAuthenticationHandler.cs  AuthConstants.cs  IApiKeyValidator.cs  InMemoryApiKeyValidator.cs
src/LlamaRuntime.Presentation.Grpc/Configuration/: ApiKeyOptions.cs  HostedModelOptions.cs  InferenceOptions.cs  RateLimiterOptions.cs  ServiceCollectionExtensions.cs
src/LlamaRuntime.Presentation.Grpc/HealthChecks/: ModelReadyHealthCheck.cs
src/LlamaRuntime.Presentation.Grpc/HostedServices/: InferenceWorker.cs  ModelLoaderWorker.cs
src/LlamaRuntime.Presentation.Grpc/Logging/: LoggingInterceptor.cs
src/LlamaRuntime.Presentation.Grpc/Managers/: IInferenceManager.cs  InferenceManager.cs  InferenceRequest.cs
src/LlamaRuntime.Presentation.Grpc/Properties/: launchSettings.json
src/LlamaRuntime.Presentation.Grpc/Protos/: generate.proto
src/LlamaRuntime.Presentation.Grpc/Services/: GeneratorService.cs
